changes for win32 release
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1113 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -48,6 +48,7 @@ if sys.platform == 'win32':
 	env.Append(CCFLAGS = '-Wall -O2') # for mingw!
 	if (usex86sse >= 1):
 		env.Append(CPPDEFINES = ['USE_SSE'])
+		osspecificsrc += ['water_sse.cpp']
 		print 'Using x86 SSE/MMX optimizations.'
 	datadir = './data'
 	build_dir = 'win32'
