--- a/dangerdeep/debian/DEBIAN/control
+++ b/dangerdeep/debian/DEBIAN/control
@@ -3,10 +3,11 @@ Version: 0.1.0-1
 Section: games
 Priority: extra
 Architecture: i386
-Depends: aalib1, libasound2, libc6, libgcc1, libgpmg1, libjpeg62, libncurses5, libogg0, libpng12-0, libsdl-image1.2, libsdl-mixer1.2, libsdl-net1.2, libsdl1.2debian-all, libsmpeg0, libstdc++5, libsvga1, libvorbis0a, libvorbisfile3, nvidia-glx | xlibmesa3-gl | xlibmesa-gl, slang1, slang1a-utf8, xlibmesa3-glu | xlibmesa-glu, xlibs, zlib1g, fftw3
+Depends: libc6, libgcc1, libsdl-image1.2, libsdl-mixer1.2, libsdl-net1.2, libsdl1.2debian, libstdc++6, xlibmesa-gl | nvidia-glx | libgl1, xlibmesa-glu | libglu1 | libglu1-xorg, fftw3
 Maintainer: Viktor Radnai <efti@gotiao.com>
 Description: Danger from the Deep is a World War II German submarine simulator game
  The game has custom and historical missions, three submarines,
- three warship and eight civilian ship types.
+ three warship and eight civilian ship types. It features a fully
+ 3d environment with OpenGL graphics and physics simulation.
  .
  It's state is alpha but it is playable.
