new tdc class; target is stored in sea_object, so every object manages at most one target with automatic check for is_alive condition
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1119 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -44,6 +44,7 @@ dftdsources = Split("""subsim.cpp
 	sub_torpedo_display.cpp
 	sub_torpsetup_display.cpp
 	sub_uzo_display.cpp
+	tdc.cpp
 	texts.cpp
 	tokenizer.cpp
 	torpedo.cpp
