Added main menu music feature
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1130 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -22,6 +22,7 @@ dftdsources = Split("""subsim.cpp
 	logbook.cpp
 	logbook_display.cpp
 	map_display.cpp
+	music.cpp
 	network.cpp
 	parser.cpp
 	particle.cpp
