new xml interface code, now usage of xml is much easier
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1153 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -52,7 +52,8 @@ dftdsources = Split("""subsim.cpp
 	triangulate.cpp
 	user_interface.cpp
 	water.cpp
-	widget.cpp""")
+	widget.cpp
+	xml.cpp""")
 
 dftdmediasources = Split("""
 	font.cpp
