added ocean generator test
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1158 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -88,6 +88,9 @@ env.Default(tool1)
 env.Default(tool2)
 env.Default(tool3)
 
+test1 = env.Program('oceantest', ['oceantest.cpp'])
+env.Default(test1)
+
 ############ this allows to run "scons install" to install the binary
 install = env.Alias('install', env.Install(installbindir, binary))
 env.Depends(install, binary)
