faulthandler improved, added needed linker option
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1193 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -112,6 +112,7 @@ else:
 		osspecificsrc += ['water_sse.cpp']
 		print 'Using x86 SSE/MMX optimizations.'
 	env.Append(CCFLAGS = ccflags)
+	env.Append(LINKFLAGS = '-Xlinker --export-dynamic')
 	datadir = installdatadir
 	build_dir = 'linux'
 	# check for broken libGL, ignore undefined symbols then
