preparations for relationship reading in model class: use new xml functions in class model anywhere; more error checks; new xml functions
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1211 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -52,8 +52,7 @@ dftdsources = Split("""subsim.cpp
 	triangulate.cpp
 	user_interface.cpp
 	water.cpp
-	widget.cpp
-	xml.cpp""")
+	widget.cpp""")
 
 dftdmediasources = Split("""
 	error.cpp
@@ -62,7 +61,8 @@ dftdmediasources = Split("""
 	make_mesh.cpp
 	model.cpp
 	system.cpp
-	texture.cpp""")
+	texture.cpp
+	xml.cpp""")
 
 tinyxmlsources = Split("""
 	tinyxml/tinystr.cpp
