implemented the Erkennungskarte (ecard, recognition card) popup
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1230 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -37,6 +37,7 @@ dftdsources = Split("""subsim.cpp
 	submarine_interface.cpp
 	sub_bridge_display.cpp
 	sub_control_popup.cpp
+	sub_ecard_popup.cpp
 	sub_damage_display.cpp
 	sub_gauges_display.cpp
 	sub_periscope_display.cpp
