added first bits of game editor; removed unused main menu entries
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1232 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -16,6 +16,7 @@ dftdsources = Split("""subsim.cpp
 	filehelper.cpp
 	freeview_display.cpp
 	game.cpp
+	game_editor.cpp
 	gun_shell.cpp
 	highscorelist.cpp
 	keys.cpp
