--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -79,11 +79,12 @@ oglextsources = Split("""
 
 ############# programs, libs, etc.
 env.StaticLibrary(target = 'dftdmedia', source = dftdmediasources, LIBS = gfxlibs)
-globaldataobj = env.StaticObject('global_data.cpp', CPPDEFINES = [('DATADIR', '\\"' + datadir + '/\\"'), ('VERSION', '\\"' + version + '\\"')])
-binary = env.Program(target = 'dangerdeep', source = dftdsources + globaldataobj + osspecificsrc, LIBS = alllibs)
-tool1 = env.Program('viewmodel', ['viewmodel.cpp', globaldataobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
-tool2 = env.Program('damagemodel', ['damagemodel.cpp', globaldataobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
-tool3 = env.Program('crosssection', ['crosssection.cpp', globaldataobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+datadirsobj = env.StaticObject('datadirs.cpp', CPPDEFINES = [('DATADIR', '\\"' + datadir + '/\\"')])
+globaldataobj = env.StaticObject('global_data.cpp', CPPDEFINES = [('VERSION', '\\"' + version + '\\"')])
+binary = env.Program(target = 'dangerdeep', source = dftdsources + datadirsobj + globaldataobj + osspecificsrc, LIBS = alllibs)
+tool1 = env.Program('viewmodel', ['viewmodel.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+tool2 = env.Program('damagemodel', ['damagemodel.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+tool3 = env.Program('crosssection', ['crosssection.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
 env.StaticLibrary(target = 'oglext', source = oglextsources)
 env.StaticLibrary(target = 'tinyxml', source = tinyxmlsources)
 env.Default(binary)
@@ -94,7 +95,7 @@ env.Default(tool3)
 test1 = env.Program('oceantest', ['oceantest.cpp'])
 env.Default(test1)
 
-portal = env.Program('portal', ['portal.cpp', globaldataobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+portal = env.Program('portal', ['portal.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
 env.Default(portal) 
 
 ############ this allows to run "scons install" to install the binary
