new sky color generation code from Alexandre and Matija
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1285 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -13,6 +13,7 @@ dftdsources = Split("""subsim.cpp
 	convoy.cpp
 	countrycodes.cpp
 	date.cpp
+	daysky.cpp
 	depth_charge.cpp
 	filehelper.cpp
 	freeview_display.cpp
