added alllibs to link arguments of oceantest for fftw lib
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1295 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -93,7 +93,7 @@ env.Default(tool1)
 env.Default(tool2)
 env.Default(tool3)
 
-test1 = env.Program('oceantest', ['oceantest.cpp'])
+test1 = env.Program('oceantest', ['oceantest.cpp'], LIBS = alllibs)
 env.Default(test1)
 
 portal = env.Program('portal', ['portal.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
