changes for BSD compatibility
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1314 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -81,6 +81,7 @@ elif (sys.platform == 'freebsd5') or (sys.platform == 'freebsd6') or (sys.platfo
 	libpath = [LOCALBASE + '/lib', X11BASE + '/lib'] 
 	gllibs = ['GL', 'GLU']
 	sdllibs = ['SDL_image']
+	extralibs = ['execinfo']
 	cpuinfof = os.popen('sysctl -n hw.instruction_sse')
 	cpuinfol = cpuinfof.readlines()
 	mmxsupported = False
