added xyY -> RGB conversion from Stellarium. But the colors are way too dark. Either we need to add the additional sky brightness simulation of Stellarium (skybright.cpp) as well and/or our angle computations are wrong (sun elevation/azimuth). Stellarium uses angles against zenithe... to be checked
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1315 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -52,6 +52,7 @@ dftdsources = Split("""subsim.cpp
 	tdc.cpp
 	texts.cpp
 	tokenizer.cpp
+	tone_reproductor.cpp
 	torpedo.cpp
 	triangulate.cpp
 	user_interface.cpp
