--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -44,6 +44,7 @@ dftdsources = Split("""subsim.cpp
 	sub_damage_display.cpp
 	sub_gauges_display.cpp
 	sub_ghg_display.cpp
+	sub_kdb_display.cpp
 	sub_periscope_display.cpp
 	sub_tdc_display.cpp
 	sub_tdc_popup.cpp
