new BG screen is ready (replacing damage screen as test)
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1320 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -38,6 +38,7 @@ dftdsources = Split("""subsim.cpp
 	sound.cpp
 	submarine.cpp
 	submarine_interface.cpp
+	sub_bg_display.cpp
 	sub_bridge_display.cpp
 	sub_control_popup.cpp
 	sub_ecard_popup.cpp
