--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -35,6 +35,7 @@ dftdsources = Split("""subsim.cpp
 	ship.cpp
 	ships_sunk_display.cpp
 	sky.cpp
+	sonar.cpp
 	sound.cpp
 	submarine.cpp
 	submarine_interface.cpp
