--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -84,12 +84,17 @@ oglextsources = Split("""
 	oglext/RenderingContext.cpp
 	oglext/RenderingContext.hpp""")
 
+viewmodelsources = Split("""
+        filehelper.cpp
+        widget.cpp
+        viewmodel.cpp""")
+
 ############# programs, libs, etc.
 env.StaticLibrary(target = 'dftdmedia', source = dftdmediasources, LIBS = gfxlibs)
 datadirsobj = env.StaticObject('datadirs.cpp', CPPDEFINES = [('DATADIR', '\\"' + datadir + '/\\"')])
 globaldataobj = env.StaticObject('global_data.cpp', CPPDEFINES = [('VERSION', '\\"' + version + '\\"')])
 binary = env.Program(target = 'dangerdeep', source = dftdsources + datadirsobj + globaldataobj + osspecificsrc, LIBS = alllibs)
-tool1 = env.Program('viewmodel', ['viewmodel.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+tool1 = env.Program('viewmodel', viewmodelsources + datadirsobj + osspecificsrc, LIBS = alllibs)
 tool2 = env.Program('damagemodel', ['damagemodel.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
 tool3 = env.Program('crosssection', ['crosssection.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
 env.StaticLibrary(target = 'oglext', source = oglextsources)
