tried to improve sonar operator simulation
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1390 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -37,6 +37,7 @@ dftdsources = Split("""subsim.cpp
 	sky.cpp
 	moon.cpp
 	sonar.cpp
+	sonar_operator.cpp
 	sound.cpp
 	submarine.cpp
 	submarine_interface.cpp
