--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -96,8 +96,8 @@ datadirsobj = env.StaticObject('datadirs.cpp', CPPDEFINES = [('DATADIR', '\\"' +
 globaldataobj = env.StaticObject('global_data.cpp', CPPDEFINES = [('VERSION', '\\"' + version + '\\"')])
 binary = env.Program(target = 'dangerdeep', source = dftdsources + datadirsobj + globaldataobj + osspecificsrc, LIBS = alllibs)
 tool1 = env.Program('viewmodel', viewmodelsources + datadirsobj + osspecificsrc, LIBS = alllibs)
-tool2 = env.Program('damagemodel', ['damagemodel.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
-tool3 = env.Program('crosssection', ['crosssection.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+tool2 = env.Program('damagemodel', ['damagemodel.cpp', datadirsobj, 'sound.cpp', 'filehelper.cpp'] + osspecificsrc, LIBS = alllibs)
+tool3 = env.Program('crosssection', ['crosssection.cpp', datadirsobj, 'sound.cpp', 'filehelper.cpp'] + osspecificsrc, LIBS = alllibs)
 env.StaticLibrary(target = 'oglext', source = oglextsources)
 env.StaticLibrary(target = 'tinyxml', source = tinyxmlsources)
 env.Default(binary)
@@ -108,7 +108,7 @@ env.Default(tool3)
 test1 = env.Program('oceantest', ['oceantest.cpp'], LIBS = alllibs)
 env.Default(test1)
 
-portal = env.Program('portal', ['portal.cpp', datadirsobj, 'sound.cpp'] + osspecificsrc, LIBS = alllibs)
+portal = env.Program('portal', ['portal.cpp', datadirsobj, 'sound.cpp', 'filehelper.cpp'] + osspecificsrc, LIBS = alllibs)
 env.Default(portal)
 
 ############ this allows to run "scons install" to install the binary
