Updated SConstruct for architecture independent build +xorg6/7/7.1.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1479 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -130,7 +130,8 @@ else:
 	libpath = ['/usr/X11R6/lib']
 	gllibs = ['GL', 'GLU']
 	sdllibs = ['SDL', 'SDL_image']
-	ccflags = '-Wall `sdl-config --cflags`'
+	ccflags = '-Wall `sdl-config --cflags` `pkg-config x11 --cflags`'
+	env.Append(LINKFLAGS = '`pkg-config x11 --libs-only-L`')
 	if (debug >= 3):
 		ccflags += ' -g -pg -O3'	# profiling
 	elif (debug == 2):
