--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -2,7 +2,7 @@
 import os
 import sys
 
-Import('env', 'gfxlibs', 'alllibs', 'installbindir', 'installdatadir', 'datadir', 'datafiles', 'version', 'osspecificsrc')
+Import('env', 'gfxlibs', 'alllibs', 'installbindir', 'datadir', 'version', 'osspecificsrc')
 
 ################## define sources #######################
 dftdsources = Split("""subsim.cpp
@@ -118,10 +118,3 @@ env.Default(portal)
 ############ this allows to run "scons install" to install the binary
 install = env.Alias('install', env.Install(installbindir, binary))
 env.Depends(install, binary)
-
-# fixme: remove that when we have the data package
-for i in datafiles:
-	# remove './data' from begin of i and filename from end
-	j = i.rfind(os.sep)
-	ipath = i[6:j]
-	env.Depends(install, env.Install(installdatadir + ipath, '#/' + i))
