--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -28,6 +28,8 @@ dftdsources = Split("""subsim.cpp
 	network.cpp
 	parser.cpp
 	particle.cpp
+	physics.cpp
+	environment.cpp
 	perlinnoise.cpp
 	sea_object.cpp
 	sensors.cpp
