--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -99,7 +99,8 @@ filehelper_obj = env.Object(source = 'filehelper.cpp')
 widget_obj = env.Object(source = 'widget.cpp')
 datadirsobj = env.StaticObject('datadirs.cpp', CPPDEFINES = [('DATADIR', '\\"' + datadir + '/\\"')])
 globaldataobj = env.StaticObject('global_data.cpp', CPPDEFINES = [('VERSION', '\\"' + version + '\\"')])
-binary = env.Program(target = 'dangerdeep', source = dftdsources + sound_obj + filehelper_obj + widget_obj + datadirsobj + globaldataobj + osspecificsrc_obj, LIBS = alllibs)
+frustum_obj = env.Object(source = 'frustum.cpp')
+binary = env.Program(target = 'dangerdeep', source = dftdsources + sound_obj + filehelper_obj + widget_obj + frustum_obj + datadirsobj + globaldataobj + osspecificsrc_obj, LIBS = alllibs)
 tool1 = env.Program('viewmodel', viewmodelsources + datadirsobj + filehelper_obj + widget_obj + osspecificsrc_obj, LIBS = alllibs)
 tool2 = env.Program('damagemodel', ['damagemodel.cpp', datadirsobj, sound_obj, filehelper_obj] + osspecificsrc_obj, LIBS = alllibs)
 tool3 = env.Program('crosssection', ['crosssection.cpp', datadirsobj, sound_obj, filehelper_obj] + osspecificsrc_obj, LIBS = alllibs)
@@ -115,7 +116,7 @@ test2 = env.Program('bsplinetest', ['bspline_test.cpp'])
 env.Default(test1)
 env.Default(test2)
 
-portal = env.Program('portal', ['portal.cpp', datadirsobj, sound_obj, filehelper_obj] + osspecificsrc_obj, LIBS = alllibs)
+portal = env.Program('portal', ['portal.cpp', datadirsobj, sound_obj, filehelper_obj, frustum_obj] + osspecificsrc_obj, LIBS = alllibs)
 env.Default(portal)
 
 ############ this allows to run "scons install" to install the binary
