added opengl frame buffer object wrapper class
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1675 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -67,6 +67,7 @@ dftdsources = Split("""subsim.cpp
 
 dftdmediasources = Split("""
 	error.cpp
+	framebufferobject.cpp
 	font.cpp
 	image.cpp
 	make_mesh.cpp
