renamed vertexbuffer to vertexbufferobject
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1711 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -75,7 +75,7 @@ dftdmediasources = Split("""
 	shader.cpp
 	system.cpp
 	texture.cpp
-	vertexbuffer.cpp
+	vertexbufferobject.cpp
 	xml.cpp""")
 
 tinyxmlsources = Split("""
